--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,5 +9,5 @@
       or implied. See the License for the specific language governing permissions and limitations under
       the License.
       -->
-    <style name="Theme.AndroidDevChallenge" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.WeTrade" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
